--- a/console-customisations/console-notification.welcome-banner.yaml
+++ b/console-customisations/console-notification.welcome-banner.yaml
@@ -3,10 +3,10 @@ kind: ConsoleNotification
 metadata:
   name: welcome-banner
 spec:
-  backgroundColor: '#EE0000'
+  backgroundColor: 'pink'
   color: '#fff'
   link:
     href: https://www.redhat.com/en/summit
     text: (Event Information)
   location: BannerTop
-  text: Welcome to Red Hat Summit 2023!
+  text: hi!
