--- a/managed-namespaces/overlays/project-memes-dev/role.yaml
+++ b/managed-namespaces/overlays/project-memes-dev/role.yaml
@@ -1,3 +1,8 @@
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: memes-dev-editors
+  namespace: project-memes-dev
 roleRef:
   # The role being bound. In this case we're re-using the existing
   # edit role that's defined at cluster scope
